--- a/service-workers/01/02/index.html
+++ b/service-workers/01/02/index.html
@@ -9,7 +9,7 @@
 <p>State: <strong id="state"></strong></p>
 <script>
 function printState(state) {
-document.getElementById('state').innerHTML += state;
+document.getElementById('state').innerHTML += state + "->";
 }
 if ('serviceWorker' in navigator) {
 navigator.serviceWorker.register(
