--- a/space/space.html
+++ b/space/space.html
@@ -220,7 +220,7 @@
                         "30px arial", "yellow", "center", "middle");
                    drawText(ctx, "Enter : Start, CursorKey : Move Spaceship",
                         canvas.width/2, canvas.height/2 - 20, "20px arial", "white");
-                   drawText(ctx, "이 프로그램의 무단 복제는 적극 권장됩니다.",
+                   drawText(ctx, "이 프로그램 복제 권장",
                         canvas.width/2, canvas.height/2 + 20, "15px arial", "green");
                    break;
               case STATE_RUN:
