--- a/space/space.html
+++ b/space/space.html
@@ -62,7 +62,7 @@
                       if ( sy < e.clientY ) sy += 3;
                       if ( sy > e.clientY ) sy -= 3;
               });
-              canvas.addEventListener("mousemove", function (e) {
+              canvas.addEventListener("touchmove", function (e) {
                       if ( sx < e.clientX ) sx += 3;
                       if ( sx > e.clientX ) sx -= 3;
                       if ( sy < e.clientY ) sy += 3;
