--- a/space/space.html
+++ b/space/space.html
@@ -4,7 +4,7 @@
      <title>space</title>
 </head>
 <body>
-     <p>요래 조래 도망다니면서 운석 피하기 게임</p>
+     <p>운석 피하기 게임</p>
      <canvas id="canvas" width="300" height="400" style="background:black";>
          이 브라우저는 캔버스를 지원하지 않습니다.
      </canvas>
