--- a/space/space.html
+++ b/space/space.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <head>
      <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>space</title>
+     <style>
+          body {
+               overflow : hidden;
+          }
+     </style>
 </head>
 <body>
      <p>운석 피하기 게임</p>
