--- a/space/space.html
+++ b/space/space.html
@@ -35,7 +35,7 @@
 
          // 우주선
          var spaceShip;
-         var sx, sy;
+         var sx, sy, sx2, sy2;
          var SW=31, SH=31;
          var angle = 0;
 
